# flutter_rust_demo

./: ARCHITECTURE.md  AVATAR_UPDATE.md  CHAT_APP_README.md  QUICKSTART.md  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: chat.dart  message.dart  user.dart
lib/screens/: chat_detail_screen.dart  chat_list_screen.dart  contacts_screen.dart  main_screen.dart  profile_screen.dart
lib/src/rust/: frb_generated.dart
lib/src/rust/api/: simple.dart
lib/theme/: app_theme.dart
lib/widgets/: chat_input.dart  chat_list_item.dart  message_bubble.dart  user_avatar.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/api/: mod.rs  openim_client.rs  simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_flutter_rust_demo.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_flutter_rust_demo.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+1 files in other folders)
