[package]
name = "rust_lib_flutter_rust_demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
openim-protocol = { path = "../../protocol" }
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.0"
base64 = "0.22"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
